# Mello

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  LevelMeter.cpp  LevelMeter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SliderComponent.cpp  SliderComponent.h
